tests/e2e/positive/while/input.ela
int main() {
    int n = 100;
    while (n != 0) {
        n = n - 1;
    }
    return n; // n should be 0
}
