tests/e2e/negative/redefinition/input.ela
int foo() {
    return 47;
}

int foo() {
    return 42;
}
